flux/manifests/04-apps/artificial-intelligence/langfuse/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: langfuse
  namespace: langfuse
  labels:
    app.kubernetes.io/name: langfuse
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
      sectionName: https
  hostnames:
    - langfuse.gateway.services.apocrathia.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: langfuse-web
          port: 3000
